style: fix alignment of price chart bars

--- a/src/assets/currency.css
+++ b/src/assets/currency.css
@@ -1,6 +1,7 @@
 .bar {
     display: inline-block;
     width: 24px;
+    writing-mode: vertical-lr;
 }
 .dot {
     display: inline-block;
